--- a/package.json
+++ b/package.json
@@ -1,25 +1,11 @@
 {
-	"name": "@api/xcoders.xyz",
-	"version": "1.1.1",
-	"description": "My Rest Api Projectttttt",
-	"main": "index.js",
-	"scripts": {
-		"start": "node index.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/FarhanXC7/restAPIs.git"
-	},
-	"keywords": [
-		"Rest",
-		"API",
-		"Private"
-	],
-	"author": "Farhannnn ×͜×",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/FarhanXC7/restAPIs/issues"
-	},
+  "name": "nodejs",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
 	"dependencies": {
 		"axios": "^0.21.1",
 		"brainly-scraper": "^1.0.3",
