--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"axios": "^0.21.1",
 		"brainly-scraper": "^1.0.3",
 		"cheerio": "^1.0.0-rc.6",
+		"cors": "^2.8.5",
 		"cloudscraper": "^4.6.0",
 		"compression": "^1.7.4",
 		"connect-flash": "^0.1.1",
