--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
 		"cookie-parser": "^1.4.5",
 		"crypto": "^1.0.1",
 		"ejs": "^3.1.6",
+		"path": "*", 
 		"express": "^4.17.1",
 		"express-ejs-layouts": "^2.5.1",
 		"express-fileupload": "^1.2.1",
 		"express-rate-limit": "^5.2.6",
 		"express-recaptcha": "^5.0.2",
 		"express-session": "^1.17.2",
+		"@vercel/analytics": "*", 
 		"file-type": "^16.5.0",
 		"form-data": "^4.0.0",
 		"fs": "0.0.1-security",
